fixed pesky overflow

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ a:hover {
     float: right;
     font-family: 'europa', sans-serif;
     list-style-type: none;
-    overflow: auto;
 }
 
 #navbar a {
